--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
+* {
+	box-sizing: border-box;
+}
+
 
 h1 {
     font-weight: bold;
     margin: 0;
+
 }
 
 p {
@@ -179,7 +184,7 @@ input {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    padding: 0 40px;
+    padding: 0 60px;
     text-align: center;
     top: 0;
     height: 100%;
@@ -187,6 +192,7 @@ input {
     transform: translateX(0);
     transition: transform 0.6s ease-in-out;
 }
+
 
 .overlay-left {
     transform: translateX(-20%);
