--- a/style.css
+++ b/style.css
@@ -1,7 +1,16 @@
 * {
 	box-sizing: border-box;
+	
 }
 
+body {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	margin: 0;
+	background-color: #f0f0f0;
+}
 
 h1 {
     font-weight: bold;
